# RL24-Homework4

./: README.md
Attempts/1First/: Info.txt
Attempts/2Second/: Info.txt
Attempts/3Third/: Info.txt
Attempts/4Fourth/: Info.txt
aruco_transform/: CMakeLists.txt  package.xml
aruco_transform/src/: static_aruco_tf2_broadcaster.cpp
rl_fra2mo_description/: CMakeLists.txt  README.md  package.xml
rl_fra2mo_description/config/: ArucoGoals.yaml  amcl.yaml  ekf.yaml  explore.yaml  mapping.yaml  navigation.yaml  navigationwSLAM.yaml  slam.yaml  slam_no_map.yaml  waypoints.yaml
rl_fra2mo_description/launch/: display_fra2mo.launch.py  fra2mo_ArUco.launch.py  fra2mo_amcl.launch.py  fra2mo_explore.launch.py  fra2mo_mapping.launch.py  fra2mo_navigation.launch.py  fra2mo_run.launch.py  fra2mo_slam.launch.py  gazebo_fra2mo.launch.py
rl_fra2mo_description/maps/: map.pgm  map.yaml  mapTest.pgm  mapTest.yaml  map_prof.pgm  map_prof.yaml  sim_map.yaml
rl_fra2mo_description/meshes/: assieme_gara_2023.stl
rl_fra2mo_description/models/obstacle_03/: obstacle_03.sdf
rl_fra2mo_description/models/obstacle_06/: obstacle_06.sdf
rl_fra2mo_description/models/obstacle_09/: obstacle_09.sdf
rl_fra2mo_description/models/obstacle_09_wArUco/: obstacle_09.sdf
rl_fra2mo_description/models/obstacle_09_wArUco/arucotag/: model.sdf
rl_fra2mo_description/models/obstacle_10/: obstacle_10.sdf
rl_fra2mo_description/models/obstacle_10_/: obstacle_10_.sdf
rl_fra2mo_description/models/race_field/: model.sdf
rl_fra2mo_description/models/roof/: roof.sdf
rl_fra2mo_description/models/unknown_obst_3/: unknown_obst_3.sdf
rl_fra2mo_description/models/unknown_tunnel_1/: unknown_tunnel_1.sdf
rl_fra2mo_description/models/unknown_tunnel_2/: unknown_tunnel_2.sdf
rl_fra2mo_description/rviz_conf/: Explore.rviz  amcl_view.rviz  conf_base.rviz  explore.rviz  navigation.rviz  our_fra2mo_conf.rviz  our_map_fra2mo_conf.rviz  slam_view.rviz  slam_view_our.rviz
rl_fra2mo_description/scripts/: ArucoRetrieve.py  follow_waypoints.py  map_everything.py
rl_fra2mo_description/src/: odom_bl_tf.cpp
rl_fra2mo_description/urdf/: camera_gazebo_macro.xacro  d435_gazebo_macro.xacro  fra2mo.urdf.xacro  fra2mo_base_macro.xacro  lidar_gazebo_macro.xacro  test.urdf  utility_macro.xacro
rl_fra2mo_description/worlds/: leonardo_race_field.sdf
ros2_vision/: README.md
ros2_vision/aruco_ros/aruco_ros/launch/: single.launch.py
ros2_vision/aruco_ros/aruco_ros/src/: simple_single.cpp
ros2_vision/config/: camera_params.yaml
ros2_vision/ros2_opencv/: CMakeLists.txt  package.xml
ros2_vision/ros2_opencv/launch/: sphere_detect.launch.py
ros2_vision/ros2_opencv/src/: ros2_opencv_node.cpp  ros2_opencv_node_old.cpp
